@@ -1,3 +1,7 @@
+2008-03-12  Mike Kestner  <mkestner@novell.com>
+
+	* glib/GType.cs: add an Init method for explicit initialization.
+
 2008-03-04  Mike Kestner  <mkestner@novell.com>
 
 	* bootstrap-2.12: update version to 2.12 and tag
